test/Fail/BuiltinSharpBadType.err
BuiltinSharpBadType.agda:10.22-24: error: [UnequalTypes]
The type
  A
is not a subtype of
  _A_17 → ⊥
when checking that the expression ♯_ has type A → ∞ A
